2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Minor corrections to build machinery.
	* Makefile.am: Distribute setup/registry.template. Install
	AUTHORS and NEWS.
	* README: Update.
	* .cvsignore: Update.
	* lib/.cvsignore: Update.
	* src/.cvsignore: Update.

2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Extensive revisions to modernize build process.
	* .cvsignore: New.
	* COPYING: New.
	* TODO: New.
	* Makefile.am: Rewrite.
	* autogen.sh: Running configure is optional (-c). Update
	for automake-1.11. Echo commands.
	* configure.in: Renamed to...
	* configure.ac: this. Rewrite.
	* lib/Makefile.am: New.
	* lib/.cvsignore: New.
	* setup/explorer.reg: Removed.
	* setup/.cvsignore: New.
	* setup/msys-here-config.in: New.
	* setup/registry.template: New.
	* src/.cvsignore: New.
	* src/main.cpp: Fix compile warnings.
	* src/Makefile.am: New.

2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Rename documentation files to follow GCS (part 2)
	* README: New.
	* NEWS: New.
	* AUTHORS: New.

2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Rename documentation files to follow GCS (part 1)
	* Readme: Removed.
	* News: Removed.
	* Authors: Removed.

2002-12-28  Manu B  <manubee@users.sourceforge.net>

	* lib/getopt-mingw.diff: Renamed to getopt-1.12-mingw.diff.
	* lib/getopt.prj: Removed.
	* lib/makefile: Removed.
	* lib/msys.prj: Removed.
	* src/makefile: Removed.

2002-12-22  Manu B  <manubee@users.sourceforge.net>

	* setup/explorer.reg: New "Msys Dvlpr" menu.
	* src/main.cpp CWinApp::_ReadIniFile): New RxvtColors section.
	(CWinApp::_WriteIniFile): Ditto.
	(CWinApp::_GetOpt): New -d option.
	(CWinApp::_Msys): Set MSYSTEM environment variable and rxvt
	colors, depending if we run MSYS DVLPR or not.

2002-12-22  Manu B  <manubee@users.sourceforge.net>

	* ChangeLog started: MSYS Here version 0.1a.